再次提交，商品列表页结构完成

--- a/views/category.html
+++ b/views/category.html
@@ -66,7 +66,7 @@
                <ul>
                    {{each value.children v i}}
                    <li>
-                       <a href="goods_list.html?cid={{v.cat_id}}">
+                       <a href="goodList.html?cid={{v.cat_id}}">
                            <img src="http://157.122.54.189:9094{{v.cat_icon}}"
                                alt="">
                            <span>{{v.cat_name}}</span>
