商品详情页静态页面完成

--- a/styles/css/category.css
+++ b/styles/css/category.css
@@ -122,7 +122,7 @@ ul {
   width: 100%;
   flex: 1;
   display: flex;
-  overflow: scroll;
+  overflow: hidden;
 }
 .layout .pygviews > .left {
   width: 25%;
