--- a/styles/css/category.less
+++ b/styles/css/category.less
@@ -26,7 +26,7 @@
     width: 100%;
     flex: 1;
     display: flex;
-    overflow: scroll;
+    overflow: hidden;
 
     >.left {
       width: 25%;
