--- a/styles/css/goodList.css
+++ b/styles/css/goodList.css
@@ -131,6 +131,40 @@ ul {
   overflow: hidden;
   position: relative;
 }
+.layout .pygviews .content {
+  width: 100%;
+}
+.layout .pygviews .content ul {
+  width: 100%;
+}
+.layout .pygviews .content ul > li {
+  width: 100%;
+  background-color: #fff;
+  margin-bottom: 10px;
+  padding: 15px 10px;
+}
+.layout .pygviews .content ul > li > a {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+}
+.layout .pygviews .content ul > li > a > span {
+  width: 50%;
+}
+.layout .pygviews .content ul > li > a > span > img {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+.layout .pygviews .mui-scroll-wrapper {
+  top: 45px;
+}
+.layout .pygviews .mui-bar-nav ~ .mui-content {
+  padding-top: 0px;
+}
 .layout .footer {
   width: 100%;
   height: 50px;
