--- a/styles/css/goodList.less
+++ b/styles/css/goodList.less
@@ -30,7 +30,48 @@
      flex-direction: column;
      overflow: hidden;
      position: relative;
-     
+     .content{
+      width: 100%;
+      //  background: #fff;
+      ul{
+        width: 100%;
+        >li{
+          width: 100%;
+          background-color: #fff;
+          margin-bottom:10px;
+          padding:15px 10px;
+          >a{
+            display: inline-block;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-wrap: wrap;
+            align-items: flex-start;
+            // position: relative;
+            >span{
+              width: 50%;
+              // padding:15px 10px;
+              >img{
+                width: 100%;
+                height: 100%;
+                display: block;
+              }
+            }
+            // >span:nth-of-type(3){
+            //   position: absolute;
+            //   left:49%;
+            //   bottom: 4%;
+            // }
+          }
+        }
+      }
+     }
+     .mui-scroll-wrapper {
+      top:45px;
+     }
+     .mui-bar-nav~.mui-content{
+       padding-top:0px;
+     }
      
    }
     .footer {
