--- a/styles/css/goodDetail.css
+++ b/styles/css/goodDetail.css
@@ -141,7 +141,7 @@ ul {
 }
 .layout .pygviews .list #item1,
 .layout .pygviews .list #item2 {
-  background: #ccc;
+  background: #eee;
   margin: 0 8px;
 }
 .layout .pygviews .list .circlparam .text {
