--- a/views/category.html
+++ b/views/category.html
@@ -45,7 +45,7 @@
                     <span class="fa fa-shopping-cart"></span>
                     <div class="mui-tab-label" style='font-size: 12px'>购物车</div>
                 </a>
-                <a class="mui-tab-item" href="./user.html">
+                <a class="mui-tab-item" href="./login.html">
                     <span class="mui-icon mui-icon-contact"></span>
                     <span class="mui-tab-label">我的</span>
                 </a>
@@ -67,7 +67,7 @@
                    {{each value.children v i}}
                    <li>
                        <a href="goodList.html?cid={{v.cat_id}}">
-                           <img src="http://157.122.54.189:9094{{v.cat_icon}}"
+                           <img src="http://140.143.222.79:8899/{{v.cat_icon}}"
                                alt="">
                            <span>{{v.cat_name}}</span>
                        </a>
