--- a/views/goodDetail.html
+++ b/views/goodDetail.html
@@ -77,8 +77,8 @@
         <a class="mui-tab-item" href="javascript:;">
           <input type="button" class="mui-btn mui-btn-danger" value="立即购买">
         </a>
-        <a class="mui-tab-item" href="./cart.html">
-          <input type="button" class="mui-btn mui-btn-warning" value="加入购物车">
+        <a class="mui-tab-item" href="#">
+          <input type="button" class="mui-btn mui-btn-warning btn-addCart" value="加入购物车">
         </a>
       </nav>
     </div>
