--- a/views/user.html
+++ b/views/user.html
@@ -5,40 +5,43 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>品优购登录页面</title>
+  <title>品优购用户页面</title>
   <link rel="stylesheet" href="../lib/mui/css/mui.css">
   <link rel="stylesheet" href="../lib/mui/fonts/mui.ttf">
   <link rel="stylesheet" href="../lib/fontawesome/css/font-awesome.css">
-  <link rel="stylesheet" href="../styles/css/login.css">
- 
+  <style>
+    .layout {
+      display: flex;
+      width: 100vw;
+      height: 100vh;
+      flex-direction: column;
+    }
+
+    .header {
+      height: 50px;
+    }
+
+    .pygviews {
+      padding: 50px 10px 0;
+      flex: 1;
+    }
+
+    .footer {
+      height: 50px;
+    }
+  </style>
+
 </head>
 
 <body>
   <div class="layout">
     <header id="header" class="mui-bar mui-bar-nav">
-
-      <h1 class="mui-title">登录</h1>
+      <h1 class="mui-title">个人中心</h1>
       <button class="mui-action-back mui-btn mui-btn-blue mui-btn-link mui-btn-nav mui-pull-left"><span
           class="mui-icon mui-icon-left-nav"></span>返回</button>
     </header>
     <div class="pygviews">
-         <form class="mui-input-group">
-           <div class="mui-input-row">
-             <label>手机</label>
-             <input type="text" placeholder="请输入手机号" value="18779767509">
-           </div>
-           <div class="mui-input-row">
-             <label>密码</label>
-             <input type="password" class="mui-input-clear" placeholder="请输入密码" data-input-clear="5" value="111111"><span
-               class="mui-icon mui-icon-clear mui-hidden"></span>
-           </div>
- 
-           
-           <div class="mui-button-row">
-             <button type="button" class="mui-btn mui-btn-primary">登录</button>
-             <button type="button" class="mui-btn mui-btn-danger btnregister" >注册</input>
-           </div>
-         </form>
+      
     </div>
     <div class="footer">
       <nav class="mui-bar mui-bar-tab">
@@ -62,11 +65,11 @@
     </div>
   </div>
 </body>
-
 <script src='../lib/zepto/zepto.js'></script>
 <script src='../lib/mui/js/mui.min.js'></script>
 <script src='../lib/arttemplate/template-web.js'></script>
 <script src='../lib/iscroll/iscroll.js'></script>
 <script src='../styles/js/common.js'></script>
-<script src='../styles/js/login.js'></script>
+<script src='../styles/js/user.js'></script>
+
 </html>
