--- a/views/category.html
+++ b/views/category.html
@@ -41,11 +41,11 @@
                     <span class="mui-icon mui-icon-list"></span>
                     <span class="mui-tab-label">分类</span>
                 </a>
-                <a class="mui-tab-item" href="./cart.html">
+                <a class="mui-tab-item cart" href="./cart.html">
                     <span class="fa fa-shopping-cart"></span>
                     <div class="mui-tab-label" style='font-size: 12px'>购物车</div>
                 </a>
-                <a class="mui-tab-item" href="./login.html">
+                <a class="mui-tab-item my" href="./user.html">
                     <span class="mui-icon mui-icon-contact"></span>
                     <span class="mui-tab-label">我的</span>
                 </a>
