--- a/views/goodList.html
+++ b/views/goodList.html
@@ -57,7 +57,7 @@
           <span class="mui-icon mui-icon-list"></span>
           <span class="mui-tab-label">分类</span>
         </a>
-        <a class="mui-tab-item" href="./cart.html">
+        <a class="mui-tab-item cart" href="./cart.html">
           <span class="fa fa-shopping-cart"></span>
           <div class="mui-tab-label" style='font-size: 12px'>购物车</div>
         </a>
